Revert "Fix z-index issue with navbar menus on iPads / media query = 768px"

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -248,7 +248,7 @@ ul.dropdown-menu > li.checkbox {
 
 @media screen and (max-width: 768px) {
     .navbar-fixed-top {
-        position: fixed;
+        position: static;
     }
     body {
         padding-top: 0;
